force-app/main/default/objects/Account/fields/test_account2__c.field-meta.xml
<CustomField>
    <fullName>test_account2__c</fullName>
    <label>test account2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>