force-app/main/default/objects/Account/fields/test_account_3__c.field-meta.xml
<CustomField>
    <fullName>test_account_3__c</fullName>
    <label>test account 3</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>