force-app/main/default/objects/Account/fields/Test_account__c.field-meta.xml
<CustomField>
    <fullName>Test_account__c</fullName>
    <label>Test_account</label>
    <length>255</length>
    <type>Text</type>
</CustomField>